style: fix landing page container margin spacing

--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -1,6 +1,6 @@
 .container {
     margin-left: 2%;
-    margin-top: 18%;
+    margin-top: max(25%, 8.5rem);
     width: 80%;
 }
 
@@ -57,13 +57,12 @@
 }
 
 @media (max-width: 1300px) {
-    .title {
-        font-size: 2.5rem;
-    }
-
     .container {
         margin-left: 10%;
-        margin-top: 13dvh;
+    }
+
+    .title {
+        font-size: 2.5rem;
     }
 
     .subtitle {
@@ -82,17 +81,7 @@
     }
 }
 
-@media (max-width: 1028px) {
-    .container {
-        margin-top: 20dvh;
-    }
-}
-
 @media (max-width: 450px) {
-    .container {
-        margin-top: 10dvh;
-    }
-
     .title {
         font-size: 1.5rem;
     }
